--- a/react-app/package.json
+++ b/react-app/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "eslint": "^8.13.0",
     "eslint-plugin-react": "^7.29.4",
+    "prettier": "2.6.2",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0"
