--- a/react-app/package.json
+++ b/react-app/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "2.6.2",
     "stylelint": "^14.7.1",
