--- a/react-app-ts/package.json
+++ b/react-app-ts/package.json
@@ -13,7 +13,6 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +48,7 @@
     "prettier": "2.6.2",
     "stylelint": "^14.7.1",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^25.0.0"
+    "stylelint-config-standard": "^25.0.0",
+    "typescript": "^4.6.3"
   }
 }
