--- a/vue-app-ts/package.json
+++ b/vue-app-ts/package.json
@@ -24,7 +24,11 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "postcss-html": "^1.4.1",
     "prettier": "^2.5.1",
+    "stylelint": "^14.8.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "~4.6.3",
     "vite": "^2.9.5",
     "vitest": "^0.9.3",
