--- a/svelte-app/package.json
+++ b/svelte-app/package.json
@@ -13,12 +13,17 @@
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^3.4.1",
+    "postcss": "^8.4.13",
+    "postcss-html": "^1.4.1",
     "prettier": "^2.6.2",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "stylelint": "^14.8.2",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^7.0.0",
     "svelte": "^3.0.0"
   },
   "dependencies": {
